# Sistemas-Embarcados

./: .gitignore  01_Intro_Sist_Emb.md  README.md
1_Respostas/: 01_Intro_Sist_Emb.md  02_Intro_Linux_1.md  02_Intro_Linux_3.md  03_GCC.md  04_File_stdio.md  05_File_POSIX_2.md  06_Processos_1.md  06_Processos_2.md  07_Pipes_Sinais_Alarmes_1.md  07_Pipes_Sinais_Alarmes_2.md  08_Threads_Mutexes_2.md  09_Sockets_1.md  09_Sockets_2.md  10_Clientes_HTTP_1.md  11_Desenv_Sist_Emb_1.md  11_Desenv_Sist_Emb_2.md  11_GPIO_1.md  11_GPIO_2.md  12_GPIO_Polling.md  13_UART_14_SPI_1.md  13_UART_14_SPI_2.md  arthur.txt  ok  teste.c
2_PCs/CODE/: Makefile  Test  UDP.c  UDP.h  main.c
3_Trabalho/: README.md
3_Trabalho/CODE/: CMakeLists.txt  Makefile  README.md
3_Trabalho/CODE/src/: UDP.c  UDP.h  UnrealEngine.c  UnrealEngine.h  main.c  motor.c  motor.h
